--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome CDN -->
     <script src="https://kit.fontawesome.com/6f228e9b50.js" crossorigin="anonymous"></script>
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Slick CDN -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 </head>
@@ -82,13 +82,13 @@
             <div class="site-slider">
                 <div class="slider-one">
                     <div>
-                        <img src="/assest/30631.jpg" class="img-fluid" alt="Banner 1">
+                        <img src="assest/30631.jpg" class="img-fluid" alt="Banner 1">
                     </div>
                     <div>
-                        <img src="/assest/30627.jpg" class="img-fluid" alt="Banner 2">
+                        <img src="assest/30627.jpg" class="img-fluid" alt="Banner 2">
                     </div>
                     <div>
-                        <img src="/assest/30629.jpg" class="img-fluid" alt="Banner 3">
+                        <img src="assest/30629.jpg" class="img-fluid" alt="Banner 3">
                     </div>
                 </div>
                 <div class="slider-btn">
@@ -106,7 +106,7 @@
             <h1 id="projectAnchor">Projects</h1>
             <div class="card-deck">
                 <div class="card">
-                    <img class="card-img-top" src="/assest/30631.jpg" alt="">
+                    <img class="card-img-top" src="assest/30631.jpg" alt="">
                     <div class="card-img-overlay">
                             <i class="fas fa-bookmark border rounded-circle"></i>
                     </div>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="/assest/30627.jpg" alt="">
+                    <img class="card-img-top" src="assest/30627.jpg" alt="">
                     <div class="card-img-overlay">
                             <i class="fas fa-bookmark"></i>
                     </div>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="/assest/30629.jpg" alt="">
+                    <img class="card-img-top" src="assest/30629.jpg" alt="">
                     <div class="card-img-overlay">
                             <i class="fas fa-bookmark"></i>
                     </div>
@@ -139,7 +139,7 @@
             <br>
             <div class="card-deck">
                 <div class="card">
-                    <img class="card-img-top" src="/assest/24538.png" alt="">
+                    <img class="card-img-top" src="assest/24538.png" alt="">
                     <div class="card-img-overlay">
                             <i class="fas fa-bookmark border rounded-circle"></i>
                     </div>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="/assest/30627.jpg" alt="">
+                    <img class="card-img-top" src="assest/30627.jpg" alt="">
                     <div class="card-img-overlay">
                             <i class="fas fa-bookmark"></i>
                     </div>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="/assest/435.jpg" alt="">
+                    <img class="card-img-top" src="assest/435.jpg" alt="">
                     <div class="card-img-overlay">
                             <i class="fas fa-bookmark"></i>
                     </div>
@@ -176,7 +176,7 @@
         <div class="container-fluid p-5 mb-5 news">
             <div class="row">
                 <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
-                    <img src="/assest/435.jpg" class="img-thumbnail">
+                    <img src="assest/435.jpg" class="img-thumbnail">
                 </div>
                 <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
                     <h3 style="color: #45ccb8; font-family: 'Gugi', cursive;"> New To Anime Center </h3>
@@ -262,6 +262,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
